--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item" href="https://github.com/joeylemon/nfa-to-dfa/blob/master/README.md">
+                <a class="navbar-item" href="https://github.com/Zaidsk/nfatodfaonline">
                     About
                 </a>
             </div>
@@ -43,7 +43,7 @@
             <div class="navbar-end">
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a class="button is-primary" href="https://github.com/joeylemon/nfa-to-dfa">
+                        <a class="button is-primary" href="https://github.com/Zaidsk/nfatodfaonline">
                             <strong><i class="mdi mdi-github" aria-hidden="true"></i> Source</strong>
                         </a>
                     </div>
